On branch master Add video to Global Azure Austria modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -63,7 +63,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>May</td>
 
-  <td>Learn over Lunch: Ed Burns about Java on Azure (<a href="https://globalazure.at/sessions/">session catalog</a>)</td>
+  <td>Learn over Lunch: Ed Burns about Java on Azure (<a href="https://www.youtube.com/watch?v=NjPH8z67AAk">Video</a>) (<a href="https://globalazure.at/sessions/">session catalog</a>)</td>
 
 </tr>
 
@@ -1801,7 +1801,7 @@ Session: Intro to JSF
     <address><a href="mailto:edburns@@acm.org"></a></address>
 <!-- Created: Mon Aug 22 09:32:52 Eastern Daylight Time 2005 -->
 <!-- hhmts start -->
-Last modified: 05 July 2022
+Last modified: 22 November 2022
 <!-- hhmts end -->
   </body>
 </html>
