On branch master Improve workflow. modified:   edburns/classic-gaming/tunnels/emulation-mister.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/classic-gaming/tunnels/emulation-mister.html
+++ b/edburns/classic-gaming/tunnels/emulation-mister.html
@@ -820,7 +820,7 @@
 
 </li>
 
-   <li>Load a disk to so you can save your game.
+   <li>Load a disk to so you can save (or restore) your game.
 
        <ol>
 
@@ -882,7 +882,7 @@
   <summary>Expand the triangle to see this section.</summary>
  <ol>
 
-   <li><p>Do the first 15 steps of the preceding section.  Note: if you had already inserted the cartridge and disk, you don't need to do those steps again.</p></li>
+   <li><p>Do the first 10 steps of the preceding section.  Note: if you had already inserted the cartridge and disk, you don't need to do those steps again.</p></li>
 
    <li><p>Select <b>3 CONTINUE CURRENT GAME</b>.</p></li>
 
@@ -906,7 +906,7 @@
   </address>
   <!-- Created: Mon Jan 14 12:12:37 Pacific Standard Time 2002 -->
   <!-- hhmts start -->
-  Last modified: Sat Oct 8 11:11:20 Eastern Daylight Time 2022 
+  Last modified: Sun Jan 08 11:11:20 Eastern Daylight Time 2023 
   <!-- hhmts end -->
 </body>
 </html>
