On branch master Thank you Brian Swetland for digging this up. edburns/content/m-x-poem-mode.txt
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/index.html
+++ b/edburns/index.html
@@ -54,6 +54,8 @@ About
 
   <a href="https://www.amazon.com/author/edburns">Amazon Author Page</a>
 
+  <a href="content/m-x-poem-mode.txt">Poem about GNU/Emacs</a>
+
   <a href="resume/bio.html">Professional Biography</a>
 
   <a href="things-I-have-read.html">Books I've Read</a>
