On branch master Put MS job in short version. modified:   edburns/resume/bio.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/resume/address.html
+++ b/edburns/resume/address.html
@@ -27,13 +27,13 @@
 <TR ALIGN="LEFT">
 <TH>Address</TH>
 <TD>
-<BR>
-FL<BR>
+    <BR>
+    FL<BR>
 </TD> 
 
 <TD>
-7453 TG Lee Boulevard<BR>
-Orlando, FL 32822<BR>
+    One Microsoft Way<BR>
+    Redmond, WA 98052<BR>
 </TD> 
 </TR>
 
@@ -41,7 +41,7 @@ Orlando, FL 32822<BR>
 <TH>Phone</TH>
 
 <TD></TD>
-<TD>407 458 0017</TD>
+<TD>+1 954 727 1095</TD>
 
 </TR>
 
@@ -49,7 +49,7 @@ Orlando, FL 32822<BR>
 
 <HR>
 <address>Ed Burns &lt;<A HREF="mailto:edburns@acm.org">edburns@acm.org</A>&gt;</address>
-Created: 13 August 1995 Last Modified: 11 October 2018 <BR>
+Created: 13 August 1995 Last Modified: 17 February 2023 <BR>
 </P>
 
 
