--- a/edburns/index.html
+++ b/edburns/index.html
@@ -64,9 +64,21 @@ About
 
   <a href="http://purl.oclc.org/NET/edburns/pgp/">PGP Public Key</a>
 
-<a href="http://purl.oclc.org/NET/edburns/calendar">Upcoming Speaking Engagements</a>
+  <a href="http://purl.oclc.org/NET/edburns/calendar">Upcoming Speaking Engagements</a>
 
-<a href="speaking-engagements.html">Past Speaking Engagements</a>
+  <a href="speaking-engagements.html">Past Speaking Engagements</a>
+
+Social links
+
+  <a href="https://bit.ly/edburns_spotify">Spotify</a>
+
+  <a href="https://mastodon.social/@edburns">Mastodon</a>
+
+  <a href="https://twitter.com/edburns">Twitter</a>
+
+  <a href="https://www.linkedin.com/in/edburns/">LinkedIn</a>
+
+  <a href="https://www.youtube.com/edburns00">YouTube</a>
 
 Recent Tweets
 
