On branch master Add JavaLand 2023 modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 	
 <tr>
 
-    <th rowspan="1"><span class="verticaltext">2023</span></th>
+    <th rowspan="2"><span class="verticaltext">2023</span></th>
+
+    <td>JavaLand</a></td>
+
+    <td>Br&uuml;hl, Germany</td>
+
+    <td>March 2023</td>
+
+    <td>Sponsored Session: Please touch that dial! (<a href="https://www.slideshare.net/edburns/sponsored-session-please-touch-that-dial">Slides</a>)</td>
+
+</tr>	
+
+<tr>
 
     <td>Microsoft Ignite Spotlight on Switzerland</a></td>
 
