use https for PURL

--- a/edburns/index.html
+++ b/edburns/index.html
@@ -21,7 +21,7 @@
 
 <pre><code>
 
-<a href="http://purl.oclc.org/NET/edburns/">http://purl.oclc.org/NET/edburns/</a>
+<a href="https://purl.oclc.org/NET/edburns/">https://purl.oclc.org/NET/edburns/</a>
 
 Social links
 
@@ -37,19 +37,19 @@ Social links
 
 Contact
 
-  <a href="http://purl.oclc.org/NET/edburns/contact">http://purl.oclc.org/NET/edburns/contact</a>
+  <a href="https://purl.oclc.org/NET/edburns/contact">https://purl.oclc.org/NET/edburns/contact</a>
 
 Calendar
 
-  <a href="http://purl.oclc.org/NET/edburns/calendar">http://purl.oclc.org/NET/edburns/calendar</a>
+  <a href="https://purl.oclc.org/NET/edburns/calendar">https://purl.oclc.org/NET/edburns/calendar</a>
 
 Projects
 
-  <a href="http://purl.oclc.org/NET/jsfbook/">JSF Book</a>
+  <a href="https://purl.oclc.org/NET/jsfbook/">JSF Book</a>
 
   <a href="https://ridingthecrest.com/">Rockstar Book</a>
 
-  <a href="http://purl.oclc.org/NET/edburns/classic-gaming/tunnels">Tunnels of Doom</a>
+  <a href="https://purl.oclc.org/NET/edburns/classic-gaming/tunnels">Tunnels of Doom</a>
 
 Blogs
 
@@ -59,7 +59,7 @@ Blogs
 
 About
 
-  <a href="http://purl.oclc.org/NET/edburns/resume">Resum&eacute;</a>
+  <a href="https://purl.oclc.org/NET/edburns/resume">Resum&eacute;</a>
 
   <a href="https://www.amazon.com/author/edburns">Amazon Author Page</a>
 
@@ -71,9 +71,9 @@ About
 
   <a href="../author.jpg">Headshot</a>
 
-  <a href="http://purl.oclc.org/NET/edburns/pgp/">PGP Public Key</a>
+  <a href="https://purl.oclc.org/NET/edburns/pgp/">PGP Public Key</a>
 
-  <a href="http://purl.oclc.org/NET/edburns/calendar">Upcoming Speaking Engagements</a>
+  <a href="https://purl.oclc.org/NET/edburns/calendar">Upcoming Speaking Engagements</a>
 
   <a href="speaking-engagements.html">Past Speaking Engagements</a>
 
