On branch master Fix git mistake. Your branch is up to date with 'origin/master'.
Changes to be committed:
  (use "git restore --staged <file>..." to unstage)
	modified:   _site/edburns/classic-gaming/tunnels/sounds/death.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/descending.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/general-store.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/giant-rat.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/hand-kill.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/hand-weapon.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/imp.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/kobold-battle.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/kobold.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/miss.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/ranged-weapon-hit-kobold.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/ranged-weapon-hit-victory.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/ranged-weapon-miss.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/ranged-weapon.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/theme-full.wav
	modified:   _site/edburns/classic-gaming/tunnels/sounds/theme.wav
	new file:   blog/2023/02/18/booty-duke.html
	new file:   blog/2023/05/18/one-minute-video.html
	modified:   blog/feed.xml
	modified:   blog/index.html
	new file:   edburns/Music/Guitaura/20230812-youtube/Wots-uh-the-deal.m4a
	new file:   edburns/Music/jugendorchester.ch/Die_Kuh_Auf_Dem_Eis/01_Dene_Wos_Guet_Geit.m4a
	modified:   edburns/classic-gaming/2600-game-by-game/2017-12-14-christmas-spectacular/2017-12-14-ed-burns-audio-submission.wav
	modified:   edburns/classic-gaming/2600-game-by-game/2018-01-08-popeye/2018-01-08-edburns-popeye.wav
	modified:   edburns/classic-gaming/2600-game-by-game/2018-01-08-popeye/STE-013.wav
	modified:   edburns/classic-gaming/260

--- a/edburns/index.html
+++ b/edburns/index.html
@@ -19,28 +19,37 @@
   <body>
     <h1>Ed Burns <a href="../author.jpg"><img width="109" src="../author.jpg" alt="Headshot of Ed Burns" /></a></h1>
 
-<p>Photograph copyright 2018 <a href="https://www.facebook.com/MysticKatz">Jennifer Reis</a> and
-<a href="https://www.facebook.com/jrrockshots/">JR Rock Shots</a>.</p>
-
 <pre><code>
 
-<a href="http://purl.oclc.org/NET/edburns/">http://purl.oclc.org/NET/edburns/</a>
+<a href="https://purl.oclc.org/NET/edburns/">https://purl.oclc.org/NET/edburns/</a>
+
+Social links
+
+  <a href="https://bit.ly/edburns_spotify">Spotify</a>
+
+  <a href="https://mastodon.social/@edburns">Mastodon</a>
+
+  <a href="https://twitter.com/edburns">Twitter</a>
+
+  <a href="https://www.linkedin.com/in/edburns/">LinkedIn</a>
+
+  <a href="https://www.youtube.com/edburns00">YouTube</a>
 
 Contact
 
-  <a href="http://purl.oclc.org/NET/edburns/contact">http://purl.oclc.org/NET/edburns/contact</a>
+  <a href="https://purl.oclc.org/NET/edburns/contact">https://purl.oclc.org/NET/edburns/contact</a>
 
 Calendar
 
-  <a href="http://purl.oclc.org/NET/edburns/calendar">http://purl.oclc.org/NET/edburns/calendar</a>
+  <a href="https://purl.oclc.org/NET/edburns/calendar">https://purl.oclc.org/NET/edburns/calendar</a>
 
 Projects
 
-  <a href="http://purl.oclc.org/NET/jsfbook/">JSF Book</a>
+  <a href="https://purl.oclc.org/NET/jsfbook/">JSF Book</a>
 
   <a href="https://ridingthecrest.com/">Rockstar Book</a>
 
-  <a href="http://purl.oclc.org/NET/edburns/classic-gaming/tunnels">Tunnels of Doom</a>
+  <a href="https://purl.oclc.org/NET/edburns/classic-gaming/tunnels">Tunnels of Doom</a>
 
 Blogs
 
@@ -50,9 +59,11 @@ Blogs
 
 About
 
-  <a href="http://purl.oclc.org/NET/edburns/resume">Resum&eacute;</a>
+  <a href="https://purl.oclc.org/NET/edburns/resume">Resum&eacute;</a>
 
   <a href="https://www.amazon.com/author/edburns">Amazon Author Page</a>
+
+  <a href="content/m-x-poem-mode.txt">Poem about GNU/Emacs</a>
 
   <a href="resume/bio.html">Professional Biography</a>
 
@@ -60,11 +71,11 @@ About
 
   <a href="../author.jpg">Headshot</a>
 
-  <a href="http://purl.oclc.org/NET/edburns/pgp/">PGP Public Key</a>
+  <a href="https://purl.oclc.org/NET/edburns/pgp/">PGP Public Key</a>
 
-<a href="http://purl.oclc.org/NET/edburns/calendar">Upcoming Speaking Engagements</a>
+  <a href="https://purl.oclc.org/NET/edburns/calendar">Upcoming Speaking Engagements</a>
 
-<a href="speaking-engagements.html">Past Speaking Engagements</a>
+  <a href="speaking-engagements.html">Past Speaking Engagements</a>
 
 Recent Tweets
 
