--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -28,6 +28,32 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <th>Topic(s)</th>
 
 </tr>
+	
+<tr>
+
+    <th rowspan="2"><span class="verticaltext">2023</span></th>
+
+    <td>JavaLand</a></td>
+
+    <td>Br&uuml;hl, Germany</td>
+
+    <td>March 2023</td>
+
+    <td>Sponsored Session: Please touch that dial! (<a href="https://www.slideshare.net/edburns/sponsored-session-please-touch-that-dial">Slides</a>)</td>
+
+</tr>	
+
+<tr>
+
+    <td>Microsoft Ignite Spotlight on Switzerland</a></td>
+
+    <td>Z&uuml;ich, Switzerland</td>
+
+    <td>March 2023</td>
+
+    <td>How modernizing enterprise applications gives you a competitive advantage (<a href="https://www.slideshare.net/edburns/how-modernizing-enterprise-applications-gives-you-a-competitive-advantage">Slides</a>)</td>
+
+</tr>	
 
 <tr>
 
