On branch master Update daily cell. modified:   edburns/home.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/home.html
+++ b/edburns/home.html
@@ -224,27 +224,18 @@ ul
  </tr>
  <tr style='mso-yfti-irow:1'>
   <td valign=top style='background:#FFDA9C;padding:.75pt .75pt .75pt .75pt'><!-- ------------------ Daily ------------------- -->
-  <p class=MsoNormal><a href="http://my.yahoo.com/"><b>My Yahoo</b></a><br>
-  <br>
-  <a href="http://www.gmail.com/"><span class=SpellE><b>gmail</b></span></a><br>
-  <br>
-  <a href="http://home.bellsouth.net/"><span class=SpellE><b>bellsouth</b></span></a><br>
-  <br>
-  <a href="http://www.ireland.com/scripts/tardis.plx?main=newspaper/front"><b>Irish
-  Times</b></a><br>
-  <a href="http://www.slashdot.org/"><b>/.</b></a><br>
-  <a href="http://www.ibiblio.org/Dave/Dr-Fun/latest.jpg"><span class=SpellE>drfun</span></a><br>
-  <a href="http://news.bbc.co.uk/default.htm">BBC</a><br>
-  <a href="http://www.smartmoney.com/marketmap/"><span class=SpellE>MarketMap</span></a><br>
-  <a
-  href="https://us.etrade.com/e/t/pfm/portfolioview?GXHC_gx_session_id_User_login_session=de018854d38bd01d&amp;"><span
-  class=SpellE>etrade</span></a><br>
-  <a href="http://my.ebay.com/ws/eBayISAPI.dll?MyeBay&amp;ssPageName=H:H:MYEBAY:US">my
-  <span class=SpellE>ebay</span></a><br>
-  <a href="http://localhost:4848/index.html">glassfish</a><br>
-  <a href="http://localhost:8080/manager/html">tomcat</a><br>
-  <a href="http://download.jxta.org/build/nightly/jnlp/myjxta.jnlp"><span
-  class=SpellE>MyJXTA</span></a><o:p></o:p></p>
+
+      <a href="https://edburns.atlassian.net/jira/software/projects/F3/boards/9">F3</a><br><br>
+      <a href="https://dev.azure.com/edburns-msft/EP%20Ed%20Burns%20Private/_sprints/taskboard/EP%20Ed%20Burns%20Private%20Team">EP</a><br><br>
+      <a href="https://devdiv.visualstudio.com/DevDiv/_sprints/taskboard/Customers%20OSEJ">DDC</a><br><br>
+      <a href="https://devdiv.visualstudio.com/DevDiv/_sprints/taskboard/Open%20Standard%20(Java%20EE)%20on%20Azure">DD</a><br><br>
+      <a href="https://dev.azure.com/was-azure/was-azure/_sprints/backlog/was-azure%20Team">IBM</a><br><br>
+      <a href="https://dev.azure.com/weblogic-azure/Open%20Standard%20Enterprise%20Java%20(Java%20EE)%20on%20Azure/_sprints/taskboard/Open%20Standard%20Enterprise%20Java%20(Java%20EE)%20on%20Azure%20Team">Oracle</a><br><br>
+      <a href="https://dev.azure.com/azure-redhat-projects/azure-redhat-projects/_sprints/backlog/JBoss%20EAP%20on%20Azure%20Team">Red Hat JBoss EAP</a><br><br>
+      <a href="https://dev.azure.com/azure-redhat-projects/azure-redhat-projects/_sprints/backlog/Quarkus%20on%20Azure%20Team">Red Hat Quarkus</a><br><br>
+      <a href="https://dev.azure.com/edburns-msft/Open%20Standard%20Enterprise%20Java%20(Java%20EE)%20on%20Azure/_sprints/taskboard/Open%20Standard%20Enterprise%20Java%20(Java%20EE)%20on%20Azure%20Team">EM</a><br><br>
+      <a href="https://dev.azure.com/edburns-msft/Ed%20Burns%20Personal/_sprints/taskboard/Ed%20Burns%20Personal%20Team">EB</a><br><br>
+
   </td>
 <!-- ------------------ Search/Tools ------------------- -->
   <td valign=top style='background:#FFDA9C;padding:.75pt .75pt .75pt .75pt'>
