On branch master Try audio tag. modified:   edburns/Music/elvis-costello/19770725-radio/index.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/Music/elvis-costello/19770725-radio/index.html
+++ b/edburns/Music/elvis-costello/19770725-radio/index.html
@@ -1,6 +1,6 @@
 <ul>
-<li><a href="19770725-01-mystery-dance.m4a">19770725-01-mystery-dance.m4a</a></li>
-<li><a href="19770725-02-red-shoes.m4a">19770725-02-red-shoes.m4a</a></li>
-<li><a href="19770725-03-less-than-zeero.m4a">19770725-03-less-than-zeero.m4a</a></li>
-<li><a href="19770725-04-blame-it-on-cain.m4a">19770725-04-blame-it-on-cain.m4a</a></li>
+    <li><a href="19770725-01-mystery-dance.m4a">19770725-01-mystery-dance.m4a</a><audio controls><source src="19770725-01-mystery-dance.m4a" type="audio/m4p"></audio> </li>
+    <li><a href="19770725-02-red-shoes.m4a">19770725-02-red-shoes.m4a</a><audio controls><source src="19770725-02-red-shoes.m4a" type="audio/m4p"></audio> </li>
+    <li><a href="19770725-03-less-than-zeero.m4a">19770725-03-less-than-zeero.m4a</a><audio controls><source src="19770725-03-less-than-zeero.m4a" type="audio/m4p"></audio> </li>
+    <li><a href="19770725-04-blame-it-on-cain.m4a">19770725-04-blame-it-on-cain.m4a</a><audio controls><source src="19770725-04-blame-it-on-cain.m4a" type="audio/m4p" /></audio> </li>
 </ul>
