On branch master Apply https://blog.getform.io/how-to-create-an-html-form-that-sends-you-an-email/ Your branch is up to date with 'origin/master'. deleted:    20220830-economist-mullet-2021-08-27.pdf modified:   contact.html modified:   edburns/index.html modified:   edburns/resume/address.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/contact.html
+++ b/contact.html
@@ -60,14 +60,14 @@
             <div>
                 <label>Full Name (optional)</label>
                 <div>
-                    <input style="margin-top: 5px; background-color: #fff; height:35px; width:235px;" type="text" name="first_name" placeholder="Enter your name and surname" required="required">
+                    <input style="margin-top: 5px; background-color: #fff; height:35px; width:235px;" type="text" name="first_name" placeholder="Enter your name and surname" >
                 </div>
             </div>
             <br>
             <div>
                 <label>Email address (optional)</label>
                 <div>
-                    <input style="margin-top: 5px;background-color: #fff; height:35px; width:235px;" type="email" name="email" placeholder="Enter your email address" required="required">
+                    <input style="margin-top: 5px;background-color: #fff; height:35px; width:235px;" type="email" name="email" placeholder="Enter your email address" >
                 </div>
             </div>
             <br>
