On branch master Apply https://blog.getform.io/how-to-create-an-html-form-that-sends-you-an-email/ Your branch is up to date with 'origin/master'. deleted:    20220830-economist-mullet-2021-08-27.pdf modified:   contact.html modified:   edburns/index.html modified:   edburns/resume/address.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/resume/address.html
+++ b/edburns/resume/address.html
@@ -47,6 +47,8 @@
 
 </TABLE>
 
+<p><code><pre><a href="https://purl.oclc.org/NET/edburns/contact">https://purl.oclc.org/NET/edburns/contact</a></pre></code></p>
+
 
         <form accept-charset="UTF-8" action="https://getform.io/f/4a01a681-f2f2-4265-a2d8-4223243736b1"" method="POST" enctype="multipart/form-data"  target="_blank" id="wpform">
             <div>
