20230721-nytimes-oppenheimer-review.pdf

--- a/edburns/index.html
+++ b/edburns/index.html
@@ -25,6 +25,8 @@
 
 Social links
 
+  <a href="https://bandmix.com/edburns">Bandmix</a>
+
   <a href="https://bit.ly/edburns_spotify">Spotify</a>
 
   <a href="https://mastodon.social/@edburns">Mastodon</a>
