https://bit.ly/quantum-cnn-ecg

--- a/owenburns/index.html
+++ b/owenburns/index.html
@@ -141,7 +141,7 @@
                     predict whether an ecg record was indicative of an
                     arrhythmia. The poster from that internship can be downloaded from
                     &lt;<a
-                            href="20230801-F3-750-Research-Poster.pdf">https://bit.ly/quantum-cnn-ecg</a>&gt;
+                            href="https://bit.ly/quantum-cnn-ecg">https://bit.ly/quantum-cnn-ecg</a>&gt;
                     The corresponding research paper is under peer review.</p> 
                 
             </details>
