https://bit.ly/kg-reasoning-rl

--- a/owenburns/index.html
+++ b/owenburns/index.html
@@ -205,7 +205,7 @@
 
                 <li>
 
-                    <p>Resume for research positions. <a href="20230801-F3-750-OB_resume_research.pdf">PDF</a></p>
+                    <p>Resume for research positions. <a href="https://bit.ly/kg-reasoning-rl">PDF</a></p>
 
                 </li>
                 
