On branch master Update with 2019-06 recording. modified:   theshow.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/theshow.html
+++ b/theshow.html
@@ -71,17 +71,14 @@ Brazil and the Rich Web Experience in U.S.A..</p>
 
 <h2>See the presentation online now!</h2>
 
-<p>Audio and Video from Ed's presentation at Jazoon 2009 is available at
-Parleys.com, at the URL: &lt;<a
-href="http://purl.oclc.org/NET/RidingTheCrest/Show">http://purl.oclc.org/NET/RidingTheCrest/Show</a>&gt;.
-Unfortunately, the subtitles did not come through on this presentation,
-but those viewing the presentation live do see them.</p>
+<p>Audio and Video from Ed's presentation at Microsoft Shanghai in 2019 is available at at the URL: &lt;<a
+href="http://purl.oclc.org/NET/RidingTheCrest/Show">http://purl.oclc.org/NET/RidingTheCrest/Show</a>&gt;.</p>
 
 </div><!--main-->
 
 </div><!--wrapper-->
 <div id="footer">
-&copy; 2008 - 2017 by Ed Burns | Site design by <a href="http://www.xoxiety.com">Xoxiety.com</a>
+&copy; 2008 - 2023 by Ed Burns | Site design by <a href="http://www.xoxiety.com">Xoxiety.com</a>
 </div>
 
 
