On branch master Update with 2019-06 recording. modified:   theshow.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/theshow.html
+++ b/theshow.html
@@ -55,8 +55,8 @@
 <h2>Riding the Crest: The Show</h2>
 
 <div id="description">
-<p><a href="http://purl.oclc.org/NET/RidingTheCrest/Show"><img
-src="author-jazoon-2009.png" width="269" height="147" alt="" /></a>Ed
+    <p><a href="https://www.youtube.com/watch?v=E6LhhCiB3hQ"><img
+                                                                                                             src="author-jazoon-2009.png" width="269" height="147" alt="" /></a>Ed
 has developed a 50 minute audio-visual presentation recounting his
 experience in writing the book.  This presentation includes audio clips
 from the programmers themselves, including subtitles for those for whom
@@ -72,7 +72,7 @@ Brazil and the Rich Web Experience in U.S.A..</p>
 <h2>See the presentation online now!</h2>
 
 <p>Audio and Video from Ed's presentation at Microsoft Shanghai in 2019 is available at at the URL: &lt;<a
-href="http://purl.oclc.org/NET/RidingTheCrest/Show">http://purl.oclc.org/NET/RidingTheCrest/Show</a>&gt;.</p>
+href="https://www.youtube.com/watch?v=E6LhhCiB3hQ">https://www.youtube.com/watch?v=E6LhhCiB3hQ</a>&gt;.</p>
 
 </div><!--main-->
 
