--- a/theshow.html
+++ b/theshow.html
@@ -71,7 +71,7 @@ Brazil and the Rich Web Experience in U.S.A..</p>
 
 <h2>See the presentation online now!</h2>
 
-<p>Audio and Video from Ed's presentation at Microsoft Shanghai in 2019 is available at at the URL: &lt;<a
+<p>Audio and Video from Ed's presentation at Microsoft Shanghai in 2019 is available at the URL: &lt;<a
 href="https://www.youtube.com/watch?v=E6LhhCiB3hQ">https://www.youtube.com/watch?v=E6LhhCiB3hQ</a>&gt;.</p>
 
 </div><!--main-->
