--- a/edburns/19720915-tonsure-abandonment-day.html
+++ b/edburns/19720915-tonsure-abandonment-day.html
@@ -203,7 +203,7 @@ ul
 
     <p>My favorite quote, "Although no Vatican spokesman would officially comment on this point today, churchmen here suggested privately that the Pope and his advisers might have considered that the tonsure was keeping some young men from studying for the priesthood in an era of elaborate male hairstyles."</p>
 
-    <p>Also interesting, "The Pope abolished the orders of porter, exorcist and sub-deacon and assigned their tasks to the offices of lector adn acolyte."</p>
+    <p>Also interesting, "The Pope abolished the orders of porter, exorcist and sub-deacon and assigned their tasks to the offices of lector and acolyte."</p>
 
     <p><img src="19720915-01.png" alt="Screen grab of front page from 1972-09-15 New York Times" /></p>
 
