On branch master Add shellhacks 2023. modified:   owenburns/index.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/owenburns/index.html
+++ b/owenburns/index.html
@@ -27,7 +27,7 @@
                 <summary>
                     
                     <p>Here are a few points about my hands-on
-                        experience with machine learning and natural
+                        experience with AI, machine learning and natural
                         language processing.</p>
 
                 </summary>
@@ -44,6 +44,17 @@
                     domains, as detailed here.</p>
 
                 <ul>
+
+                    <li><p>My two person team won the Microsoft AI
+                    Challenge category at ShellHacks 2023, the largest
+                    Hackathon in Florida. Our entry, <a href="https://devpost.com/software/gpteach">GPTeach</a>,
+                    is your complete video-based, generative AI tutor
+                    that can generate complex animations, 2D and 3D
+                    graphs, formulas, and so much more. The goal?
+                    Visually explain any topic to you, in addition to
+                    our TTS generation which explains the topic as
+                    well as explains what is going on in the visuals.</p></li>
+
 
                     <li><p>At UCF I joined the <a
                                                    href="https://www.cs.ucf.edu/research/natural-language-processing-group/">deep
