On branch master https://dev.azure.com/jakarta-ee-azdo/jakarta-ee-azdo/_workitems/edit/225 modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 	
 <tr>
 
-    <th rowspan="2"><span class="verticaltext">2023</span></th>
+    <th rowspan="3"><span class="verticaltext">2023</span></th>
+
+    <td>Microsoft Internal Presentation</a></td>
+
+    <td>Teams</td>
+
+    <td>October 2023</td>
+
+    <td>Jakarta EE 11 Status Update (<a href="https://www.slideshare.net/edburns/jakarta-ee-11-status-update">Slides</a>)</td>
+
+</tr>	
+
+<tr>
 
     <td>JavaLand</a></td>
 
