--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 	
 <tr>
 
-    <th rowspan="3"><span class="verticaltext">2023</span></th>
+    <th rowspan="4"><span class="verticaltext">2023</span></th>
+
+    <td>Microsoft Internal Presentation</a></td>
+
+    <td>Shanghai, China</td>
+
+    <td>November 2023</td>
+
+    <td>Developer Career Masterplan (<a href="https://aka.ms/DeveloperCareerMasterplan/slides">Slides</a> <a href="https://www.youtube.com/watch?v=yrXRbEmwggY">Video</a>)</td>
+
+</tr>	
+
+<tr>
 
     <td>Microsoft Internal Presentation</a></td>
 
