--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -1688,7 +1688,7 @@ Panel: Ajax panel discussion participant</br>
 </td>
 
 <td>
-<p>Keynote: <a href="https://javaserverfaces.github.io/presentations/w-jax-keynote-de-en.pdf">The Past, Present and Future of the Java Web Tier</a></p>
+    <p>Keynote: <a href="https://javaee.github.io/javaserverfaces/presentations/w-jax-keynote-de-en.pdf">The Past, Present and Future of the Java Web Tier</a></p>
 </td>
 
 </tr>
